# tax_return_app

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  calculators.py  data_manager.py  depreciation_calculator.py  main.py  models.py  pdf_generator.py  pyproject.toml  reports.py  requirements-dev.txt  requirements.txt  transaction_manager.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_basic.py  test_models.py
